src/parser/GrammarParser.java
// Generated from java-escape by ANTLR 4.11.1
package parser;

	import ast.*;
	import ast.datatype.*;
	import ast.expression.*;
	import ast.stmt.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class GrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.11.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, INT_LITERAL=51, REAL_LITERAL=52, 
		CHAR_LITERAL=53, LINE_COMMENT=54, MULTILINE_COMMENT=55, WHITESPACE=56, 
		IDENT=57;
	public static final int
		RULE_program = 0, RULE_classDef = 1, RULE_runInvoc = 2, RULE_stmts = 3, 
		RULE_stmt = 4, RULE_assigns = 5, RULE_assign = 6, RULE_procedure = 7, 
		RULE_expression = 8, RULE_args = 9, RULE_create = 10, RULE_idents = 11, 
		RULE_varsDefinitions = 12, RULE_varListDefinition = 13, RULE_varListIdents = 14, 
		RULE_fields = 15, RULE_field = 16, RULE_dataType = 17, RULE_features = 18, 
		RULE_feature = 19, RULE_params = 20, RULE_localBlock = 21, RULE_doBlock = 22, 
		RULE_returnInvoc = 23, RULE_global = 24, RULE_globalTypes = 25, RULE_varsTypes = 26, 
		RULE_deftuples = 27, RULE_deftuple = 28;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "classDef", "runInvoc", "stmts", "stmt", "assigns", "assign", 
			"procedure", "expression", "args", "create", "idents", "varsDefinitions", 
			"varListDefinition", "varListIdents", "fields", "field", "dataType", 
			"features", "feature", "params", "localBlock", "doBlock", "returnInvoc", 
			"global", "globalTypes", "varsTypes", "deftuples", "deftuple"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'end'", "'class'", "';'", "'run'", "'read'", "'print'", "'println'", 
			"'if'", "'then'", "'else'", "'from'", "'until'", "'loop'", "':='", "'('", 
			"')'", "'['", "']'", "'.'", "'-'", "'not'", "'to'", "'<'", "'>'", "'*'", 
			"'/'", "'mod'", "'+'", "'<='", "'>='", "'='", "'<>'", "'and'", "'or'", 
			"','", "'create'", "':'", "'INTEGER'", "'DOUBLE'", "'CHARACTER'", "'feature'", 
			"'is'", "'local'", "'do'", "'return'", "'global'", "'types'", "'vars'", 
			"'deftuple'", "'as'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, "INT_LITERAL", "REAL_LITERAL", "CHAR_LITERAL", "LINE_COMMENT", 
			"MULTILINE_COMMENT", "WHITESPACE", "IDENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "java-escape"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public Program ast;
		public ClassDefContext classDef;
		public GlobalContext global;
		public CreateContext create;
		public FeaturesContext features;
		public RunInvocContext runInvoc;
		public ClassDefContext classDef() {
			return getRuleContext(ClassDefContext.class,0);
		}
		public CreateContext create() {
			return getRuleContext(CreateContext.class,0);
		}
		public FeaturesContext features() {
			return getRuleContext(FeaturesContext.class,0);
		}
		public RunInvocContext runInvoc() {
			return getRuleContext(RunInvocContext.class,0);
		}
		public TerminalNode EOF() { return getToken(GrammarParser.EOF, 0); }
		public GlobalContext global() {
			return getRuleContext(GlobalContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(58);
			((ProgramContext)_localctx).classDef = classDef();
			setState(60);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__45) {
				{
				setState(59);
				((ProgramContext)_localctx).global = global();
				}
			}

			setState(62);
			((ProgramContext)_localctx).create = create();
			setState(63);
			((ProgramContext)_localctx).features = features();
			setState(64);
			match(T__0);
			setState(65);
			((ProgramContext)_localctx).runInvoc = runInvoc();
			setState(66);
			match(EOF);
			((ProgramContext)_localctx).ast =  new Program(
					((ProgramContext)_localctx).classDef.ast, 
					(_localctx.global != null ? ((ProgramContext)_localctx).global.ast : null), 
					((ProgramContext)_localctx).create.ast, 
					((ProgramContext)_localctx).features.list,
					((ProgramContext)_localctx).runInvoc.ast
				);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ClassDefContext extends ParserRuleContext {
		public ClassDef ast;
		public Token IDENT;
		public TerminalNode IDENT() { return getToken(GrammarParser.IDENT, 0); }
		public ClassDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classDef; }
	}

	public final ClassDefContext classDef() throws RecognitionException {
		ClassDefContext _localctx = new ClassDefContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_classDef);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(69);
			match(T__1);
			setState(70);
			((ClassDefContext)_localctx).IDENT = match(IDENT);
			setState(71);
			match(T__2);
			((ClassDefContext)_localctx).ast =  new ClassDef(((ClassDefContext)_localctx).IDENT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RunInvocContext extends ParserRuleContext {
		public RunInvocation ast;
		public ProcedureContext procedure;
		public ProcedureContext procedure() {
			return getRuleContext(ProcedureContext.class,0);
		}
		public RunInvocContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_runInvoc; }
	}

	public final RunInvocContext runInvoc() throws RecognitionException {
		RunInvocContext _localctx = new RunInvocContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_runInvoc);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			match(T__3);
			setState(75);
			((RunInvocContext)_localctx).procedure = procedure();
			setState(76);
			match(T__2);
			 ((RunInvocContext)_localctx).ast =  new RunInvocation(((RunInvocContext)_localctx).procedure.ast); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StmtsContext extends ParserRuleContext {
		public List<Stmt> list = new ArrayList<Stmt>();
		public StmtContext stmt;
		public List<StmtContext> stmt() {
			return getRuleContexts(StmtContext.class);
		}
		public StmtContext stmt(int i) {
			return getRuleContext(StmtContext.class,i);
		}
		public StmtsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmts; }
	}

	public final StmtsContext stmts() throws RecognitionException {
		StmtsContext _localctx = new StmtsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_stmts);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(79);
				((StmtsContext)_localctx).stmt = stmt();
				_localctx.list.add(((StmtsContext)_localctx).stmt.ast);
				}
				}
				setState(84); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( ((_la) & ~0x3f) == 0 && ((1L << _la) & 159912971151120864L) != 0 );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StmtContext extends ParserRuleContext {
		public Stmt ast;
		public ArgsContext args;
		public AssignContext assign;
		public ExpressionContext expression;
		public StmtsContext ifstmt;
		public StmtsContext elsestmt;
		public AssignsContext assigns;
		public StmtsContext stmts;
		public ProcedureContext procedure;
		public ReturnInvocContext returnInvoc;
		public ArgsContext args() {
			return getRuleContext(ArgsContext.class,0);
		}
		public AssignContext assign() {
			return getRuleContext(AssignContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public List<StmtsContext> stmts() {
			return getRuleContexts(StmtsContext.class);
		}
		public StmtsContext stmts(int i) {
			return getRuleContext(StmtsContext.class,i);
		}
		public AssignsContext assigns() {
			return getRuleContext(AssignsContext.class,0);
		}
		public ProcedureContext procedure() {
			return getRuleContext(ProcedureContext.class,0);
		}
		public ReturnInvocContext returnInvoc() {
			return getRuleContext(ReturnInvocContext.class,0);
		}
		public StmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmt; }
	}

	public final StmtContext stmt() throws RecognitionException {
		StmtContext _localctx = new StmtContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_stmt);
		int _la;
		try {
			setState(137);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(86);
				match(T__4);
				setState(87);
				((StmtContext)_localctx).args = args();
				setState(88);
				match(T__2);
				((StmtContext)_localctx).ast =  new ReadStmt((((StmtContext)_localctx).args.list != null ? ((StmtContext)_localctx).args.list : new ArrayList<>()));
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				{
				setState(91);
				match(T__5);
				setState(93);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (((_la) & ~0x3f) == 0 && ((1L << _la) & 159877786779025408L) != 0) {
					{
					setState(92);
					((StmtContext)_localctx).args = args();
					}
				}

				setState(95);
				match(T__2);
				((StmtContext)_localctx).ast =  new PrintStmt((_localctx.args != null ? ((StmtContext)_localctx).args.list : new ArrayList<>()), "");
				}
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				{
				setState(97);
				match(T__6);
				setState(99);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (((_la) & ~0x3f) == 0 && ((1L << _la) & 159877786779025408L) != 0) {
					{
					setState(98);
					((StmtContext)_localctx).args = args();
					}
				}

				setState(101);
				match(T__2);
				((StmtContext)_localctx).ast =  new PrintStmt((_localctx.args != null ? ((StmtContext)_localctx).args.list : new ArrayList<>()), "ln");
				}
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(103);
				((StmtContext)_localctx).assign = assign();
				((StmtContext)_localctx).ast =  new AssignStmt(((StmtContext)_localctx).assign.ast);
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(106);
				match(T__7);
				setState(107);
				((StmtContext)_localctx).expression = expression(0);
				setState(108);
				match(T__8);
				setState(109);
				((StmtContext)_localctx).ifstmt = stmts();
				setState(112);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__9) {
					{
					setState(110);
					match(T__9);
					setState(111);
					((StmtContext)_localctx).elsestmt = stmts();
					}
				}

				setState(114);
				match(T__0);
				 ((StmtContext)_localctx).ast =  new IfStmt(
						((StmtContext)_localctx).expression.ast,
						((StmtContext)_localctx).ifstmt.list, 
						(_localctx.elsestmt != null ? ((StmtContext)_localctx).elsestmt.list : new ArrayList<>())
					);
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(121);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__10) {
					{
					setState(117);
					match(T__10);
					setState(119);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (((_la) & ~0x3f) == 0 && ((1L << _la) & 159877786779025408L) != 0) {
						{
						setState(118);
						((StmtContext)_localctx).assigns = assigns();
						}
					}

					}
				}

				setState(123);
				match(T__11);
				setState(124);
				((StmtContext)_localctx).expression = expression(0);
				setState(125);
				match(T__12);
				setState(126);
				((StmtContext)_localctx).stmts = stmts();
				setState(127);
				match(T__0);
				 ((StmtContext)_localctx).ast =  new FromStmt(
						(_localctx.assigns != null ? ((StmtContext)_localctx).assigns.list : new ArrayList<>()), 
						((StmtContext)_localctx).expression.ast, 
						((StmtContext)_localctx).stmts.list
					);
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(130);
				((StmtContext)_localctx).procedure = procedure();
				setState(131);
				match(T__2);
				((StmtContext)_localctx).ast =  new ProcedureStmt(((StmtContext)_localctx).procedure.ast);
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(134);
				((StmtContext)_localctx).returnInvoc = returnInvoc();
				((StmtContext)_localctx).ast =  new ReturnStmt(((StmtContext)_localctx).returnInvoc.ast);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AssignsContext extends ParserRuleContext {
		public List<Assignment> list = new ArrayList<Assignment>();
		public AssignContext assign;
		public List<AssignContext> assign() {
			return getRuleContexts(AssignContext.class);
		}
		public AssignContext assign(int i) {
			return getRuleContext(AssignContext.class,i);
		}
		public AssignsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assigns; }
	}

	public final AssignsContext assigns() throws RecognitionException {
		AssignsContext _localctx = new AssignsContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_assigns);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(142); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(139);
				((AssignsContext)_localctx).assign = assign();
				_localctx.list.add(((AssignsContext)_localctx).assign.ast);
				}
				}
				setState(144); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( ((_la) & ~0x3f) == 0 && ((1L << _la) & 159877786779025408L) != 0 );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AssignContext extends ParserRuleContext {
		public Assignment ast;
		public ExpressionContext left;
		public ExpressionContext right;
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public AssignContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assign; }
	}

	public final AssignContext assign() throws RecognitionException {
		AssignContext _localctx = new AssignContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_assign);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(146);
			((AssignContext)_localctx).left = expression(0);
			setState(147);
			match(T__13);
			setState(148);
			((AssignContext)_localctx).right = expression(0);
			setState(149);
			match(T__2);
			 ((AssignContext)_localctx).ast =  new Assignment(
					((AssignContext)_localctx).left.ast, 
					((AssignContext)_localctx).right.ast
				);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProcedureContext extends ParserRuleContext {
		public Procedure ast;
		public Token IDENT;
		public Token op;
		public ArgsContext args;
		public Token cp;
		public TerminalNode IDENT() { return getToken(GrammarParser.IDENT, 0); }
		public ArgsContext args() {
			return getRuleContext(ArgsContext.class,0);
		}
		public ProcedureContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_procedure; }
	}

	public final ProcedureContext procedure() throws RecognitionException {
		ProcedureContext _localctx = new ProcedureContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_procedure);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(152);
			((ProcedureContext)_localctx).IDENT = match(IDENT);
			setState(153);
			((ProcedureContext)_localctx).op = match(T__14);
			setState(155);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (((_la) & ~0x3f) == 0 && ((1L << _la) & 159877786779025408L) != 0) {
				{
				setState(154);
				((ProcedureContext)_localctx).args = args();
				}
			}

			setState(157);
			((ProcedureContext)_localctx).cp = match(T__15);
			 ((ProcedureContext)_localctx).ast =  new Procedure(
					(((ProcedureContext)_localctx).IDENT!=null?((ProcedureContext)_localctx).IDENT.getText():null), 
					(_localctx.args != null ? ((ProcedureContext)_localctx).args.list : new ArrayList<>())
				);
				_localctx.ast.updatePositions(((ProcedureContext)_localctx).IDENT,((ProcedureContext)_localctx).op,(_localctx.args != null ? ((ProcedureContext)_localctx).args.list : null),((ProcedureContext)_localctx).cp);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExpressionContext extends ParserRuleContext {
		public Expression ast;
		public ExpressionContext exprArray;
		public ExpressionContext expStruct;
		public ExpressionContext left;
		public Token value;
		public Token name;
		public ProcedureContext procedure;
		public ExpressionContext expression;
		public DataTypeContext dataType;
		public Token operator;
		public ExpressionContext right;
		public ExpressionContext index;
		public Token IDENT;
		public TerminalNode INT_LITERAL() { return getToken(GrammarParser.INT_LITERAL, 0); }
		public TerminalNode REAL_LITERAL() { return getToken(GrammarParser.REAL_LITERAL, 0); }
		public TerminalNode CHAR_LITERAL() { return getToken(GrammarParser.CHAR_LITERAL, 0); }
		public TerminalNode IDENT() { return getToken(GrammarParser.IDENT, 0); }
		public ProcedureContext procedure() {
			return getRuleContext(ProcedureContext.class,0);
		}
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public DataTypeContext dataType() {
			return getRuleContext(DataTypeContext.class,0);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
	}

	public final ExpressionContext expression() throws RecognitionException {
		return expression(0);
	}

	private ExpressionContext expression(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ExpressionContext _localctx = new ExpressionContext(_ctx, _parentState);
		ExpressionContext _prevctx = _localctx;
		int _startState = 16;
		enterRecursionRule(_localctx, 16, RULE_expression, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(194);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				{
				setState(161);
				((ExpressionContext)_localctx).value = match(INT_LITERAL);
				 ((ExpressionContext)_localctx).ast =  new IntLiteral(((ExpressionContext)_localctx).value); 
				}
				break;
			case 2:
				{
				setState(163);
				((ExpressionContext)_localctx).value = match(REAL_LITERAL);
				 ((ExpressionContext)_localctx).ast =  new RealLiteral(((ExpressionContext)_localctx).value); 
				}
				break;
			case 3:
				{
				setState(165);
				((ExpressionContext)_localctx).value = match(CHAR_LITERAL);
				 ((ExpressionContext)_localctx).ast =  new CharLiteral(((ExpressionContext)_localctx).value); 
				}
				break;
			case 4:
				{
				setState(167);
				((ExpressionContext)_localctx).name = match(IDENT);
				 ((ExpressionContext)_localctx).ast =  new Variable((((ExpressionContext)_localctx).name!=null?((ExpressionContext)_localctx).name.getText():null)); _localctx.ast.updatePositions(((ExpressionContext)_localctx).name);
				}
				break;
			case 5:
				{
				setState(169);
				((ExpressionContext)_localctx).procedure = procedure();
				 ((ExpressionContext)_localctx).ast =  new ProcedureExpression(((ExpressionContext)_localctx).procedure.ast); 
				}
				break;
			case 6:
				{
				setState(172);
				match(T__19);
				setState(173);
				((ExpressionContext)_localctx).expression = expression(10);
